@@ -7,8 +7,9 @@ LanguageTool Change Log
      to improve the spell checker suggestions (the frequency data is taken from
      https://github.com/mozilla-b2g/gaia/tree/master/apps/keyboard/js/imes/latin/dictionaries,
      as for other languages that already use this feature).
-    -Better suggestions for English learners: irregular verbs and nouns now usually have a
-     better suggestion. For example, 'thinked' suggests 'thought', 'womans' suggests 'women'.
+    -Better suggestions for English learners: irregular verbs, nouns, and adjectives now
+     usually have a better suggestion. For example, 'thinked' suggests 'thought',
+     'womans' suggests 'women'.
 
 -French:
     -added a synthesizer - the agreement rule can now make suggestions
